big update TODO: add AutoMapper
