# Rework/HighCode.Application/Handlers/Queries/CodeTask/GetAllTasks/GetAllTaskHandler.cs
@@ -2,22 +2,71 @@
 
 using HighCode.Application.Repositories;
 using HighCode.Application.Responses;
+using HighCode.Application.Services;
+using HighCode.Domain.Constants;
+using HighCode.Domain.DTO;
 using MediatR;
 
 #endregion
 
 namespace HighCode.Application.Handlers.Queries.CodeTask.GetAllTasks;
 
-public class GetAllTaskHandler(TaskRepository taskRepository, ResponseFactory<GetAllTaskResponse> responseFactory)
+public class GetAllTaskHandler(
+    TaskRepository taskRepository,
+    ResponseFactory<GetAllTaskResponse> responseFactory,
+    CorrelationContext correlationContext
+)
     : IRequestHandler<GetAllTaskQuery, Result<GetAllTaskResponse>>
 {
     public async Task<Result<GetAllTaskResponse>> Handle(GetAllTaskQuery request, CancellationToken cancellationToken)
     {
-        var tasks = (await taskRepository.GetAllTasks()).ToArray();
+        var allTasks = (await taskRepository.GetAllTasks()).ToArray();
+        if (correlationContext.GetUserRole() != "User" && request.IsUnPublishedOnly.GetValueOrDefault())
+            allTasks = allTasks.Where(x => !x.IsPublished).ToArray();
+        else
+            allTasks = allTasks.Where(x => x.IsPublished).ToArray();
+
+        if (request.Filters != null)
+            foreach (var filter in request.Filters)
+            {
+                if (string.IsNullOrWhiteSpace(filter.Value)) continue;
+                switch (filter.Type)
+                {
+                    case FilterTypeConstants.ByLanguage:
+                    {
+                        allTasks = allTasks.Where(x => x.ProgrammingLanguage == filter.Value).ToArray();
+                        break;
+                    }
+                    case FilterTypeConstants.ByComplexity:
+                    {
+                        if (int.TryParse(filter.Value, out var val))
+                            allTasks = allTasks.Where(x => x.Complexity == val).ToArray();
+                        break;
+                    }
+                }
+            }
+
+        if (!string.IsNullOrWhiteSpace(request.SearchQuery))
+            allTasks = allTasks
+                .Where(
+                    x => (x.Title.ToLower() + " " + x.Description.ToLower())
+                        .Contains(request.SearchQuery))
+                .ToArray();
+
         return responseFactory.SuccessResponse(new GetAllTaskResponse
         {
-            Tasks = tasks,
-            Count = tasks.Length
+            Tasks = allTasks.OrderByDescending(x => x.CreateDate).Select(x => new TaskDTO()
+            {
+                Title = x.Title,
+                Description = x.Description,
+                ProgrammingLanguage = x.ProgrammingLanguage,
+                Complexity = x.Complexity,
+                IsPublished = x.IsPublished ? true : null,
+                CodeTemplate = x.CodeTemplate,
+                UnitTestCode = x.UnitTestCode,
+                Category = x.Category,
+                Id = x.Id
+            })
         });
     }
 }
