# Rework/HighCode.Application/Handlers/Queries/CodeTask/GetAllTasks/GetAllTaskQuery.cs
@@ -7,4 +7,11 @@ using MediatR;
 
 namespace HighCode.Application.Handlers.Queries.CodeTask.GetAllTasks;
 
-public record GetAllTaskQuery : IRequest<Result<GetAllTaskResponse>>;
+public class GetAllTaskQuery : IRequest<Result<GetAllTaskResponse>>
+{
+    public record FilterType(string Type, string Value);
+
+    public bool? IsUnPublishedOnly { get; set; }
+    public string? SearchQuery { get; set; }
+    public IEnumerable<FilterType>? Filters { get; set; }
+}
